fix gap in recipes

--- a/frontend/src/recipes-grid.css
+++ b/frontend/src/recipes-grid.css
@@ -2,7 +2,7 @@
   display: grid;
   grid: auto / repeat(auto-fill, 260px);
   margin: 10px auto;
-  gap: 5px;
+  gap: 24px;
   max-width: -webkit-fill-available;
 }
 
@@ -11,7 +11,7 @@
   flex-direction: column;
   text-decoration: none;
   color: black;
-  margin: 10px;
+  /* margin: 10px; */
   gap: 4px;
   padding: 8px;
   border-radius: 4px;
